tests/positive/basic/file_append_roundtrip/input.ci
void main() {
    writeFile("a.txt", "one\n");
    appendFile("a.txt", "two\n");
    print(readFile("a.txt"));
}
