tests/negative/runtime/readfile_missing/input.ci
void main() {
    string content = readFile("definitely_missing_file_123.txt");
    print(content);
}
